# eboardx

./: .gitignore  LICENSE  README.md  eboardx.xlsx
bms/: _autosave-eboardx_bms.sch  bat1-10_protection.kicad_sch  bat11-13_protection.kicad_sch  bc_oc_protection.kicad_sch  bc_oc_protection.sch  bc_oc_protection.sch-bak  eboardx_bms.kicad_pcb  eboardx_bms.kicad_prl  eboardx_bms.kicad_pro  eboardx_bms.kicad_sch  eboardx_bms.pro  eboardx_bms.sch  eboardx_bms.sch-bak  fp-lib-table  sym-lib-table
bms/Firmware/: CMakeLists.txt  build-arm
bms/Firmware/src/core/: core.cmake
bms/Firmware/src/hardware/stm32f103c8t6/: CMakeLists.txt
bms/libraries/: bms.dcm  bms.kicad_sym  bms.lib
bms/libraries/bms.pretty/: SOT-23-6.kicad_mod  SOT-23-6_Handsoldering.kicad_mod
charger/firmware/: CMakeLists.txt  LM25118 Wide Voltage Range Buck-Boost Controller.url  toolchain-arm-none-eabi.cmake
charger/firmware/src/hardware/stm32f103c8t6/: .gitignore  stm32f103c8t6.ioc
charger/hardware/: eboardx_charger.pro  eboardx_charger.sch  eboardx_charger.sch-bak  fp-lib-table  sym-lib-table
charger/hardware/libraries/: charger.dcm  charger.lib
charger/hardware/libraries/charger.pretty/: TO-220-3_Horizontal_TabUp.kicad_mod
kicad/: common.dcm  common.lib
kicad/common.pretty/: 1PAD_4x5mm.kicad_mod  LED_0603_1608Metric_Pad1.05x0.95mm_HandSolder.kicad_mod  LQFP-48_7x7mm_P0.5mm.kicad_mod  MICRO_JST_6.kicad_mod  R_2512_6332Metric.kicad_mod  R_2512_6332Metric_Pad1.52x3.35mm_HandSolder.kicad_mod  SMD-0603_c.kicad_mod  SMD-0603_r.kicad_mod  SMD-1206.kicad_mod  TO-252-2.kicad_mod
spot_welder/: fp-lib-table  power.kicad_sch  power.sch  power.sch-bak  spot_welder.kicad_pcb  spot_welder.kicad_prl  spot_welder.kicad_pro  spot_welder.kicad_sch  spot_welder.pro  spot_welder.sch  spot_welder.sch-bak  sym-lib-table
spot_welder/libraries/: spot_welder.lib
spot_welder/libraries/spot_welder.pretty/: BUS_BAR_BOTTOM.kicad_mod  BUS_BAR_TOP.kicad_mod  BUZ-TH_BD12.5-P5.00-D0.9.kicad_mod  CONN-5.0-2P.kicad_mod  C_Radial_D12.5mm_H20.0mm_P5.00mm.kicad_mod  D_SOD-123FL.kicad_mod  EVM2GSX80B14.kicad_mod  FUSE.kicad_mod  RC1602A.kicad_mod
